--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -79,6 +79,10 @@
       <Project>{5a44478b-12a2-410f-be17-4e3ad2331c5c}</Project>
       <Name>DBLOG</Name>
     </ProjectReference>
+    <ProjectReference Include="..\EFIDS\EFIDS.csproj">
+      <Project>{07A94BBB-16A5-4817-87EA-BB7BAEA844A7}</Project>
+      <Name>EFIDS</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ELOG\ELOG.csproj">
       <Project>{513e1e72-406a-4309-92dd-fb8c079c9bbd}</Project>
       <Name>ELOG</Name>
