--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -207,45 +207,49 @@
     <Compile Include="Areas\IDSMORS\IDSMORSAreaRegistration.cs" />
     <Compile Include="Areas\IDSRWT\Controllers\HomeController.cs" />
     <Compile Include="Areas\IDSRWT\IDSRWTAreaRegistration.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_BorderCheckpointController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_CarsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_PayerArrivalController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_InlandRailwayController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_ExternalStationController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_ConditionArrivalController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_LimitingLoadingController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_RailwayController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_CountrysController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_ShipperController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_ConsigneeController.cs" />
-    <Compile Include="Controllers\api\IDS_WagonsMotionSignalsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_StationController.cs" />
-    <Compile Include="Controllers\api\IDS_ParksListWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_ParksWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_CardsWagonsRepairsController.cs" />
-    <Compile Include="Controllers\api\IDS_CardsWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_WagonsConditionController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_DEPOController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_SpecialConditionsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_PoligonTravelWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_OperatorsWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_LessorsWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_OwnersWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_TypeOwnerShipController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_TypeWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_GenusWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_ModelsWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_TypesRepairsWagonsController.cs" />
-    <Compile Include="Controllers\api\IDS_Directory_WagonManufacturersController.cs" />
-    <Compile Include="Controllers\api\IDS_RWT_Incoming_UZ_DOCController.cs" />
-    <Compile Include="Controllers\api\IDS_RWT_Incoming_ArrivalCarsController.cs" />
-    <Compile Include="Controllers\api\IDS_RWT_Incoming_ArrivalSostavController.cs" />
-    <Compile Include="Controllers\api\Metrans_ConsigneeController.cs" />
-    <Compile Include="Controllers\api\Metrans_ArrivalSostavController.cs" />
-    <Compile Include="Controllers\api\UZ_Directory_InternalRailroadController.cs" />
-    <Compile Include="Controllers\api\UZ_Directory_StationsController.cs" />
-    <Compile Include="Controllers\api\UZ_Directory_StatesController.cs" />
-    <Compile Include="Controllers\api\UZ_WebClientController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_BorderCheckpointController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoGNGController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CarsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoGroupController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoETSNGController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_PayerArrivalController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_InlandRailwayController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_ExternalStationController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_ConditionArrivalController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_LimitingLoadingController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_RailwayController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CountrysController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_ShipperController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_ConsigneeController.cs" />
+    <Compile Include="Controllers\api\MORS\IDS_WagonsMotionSignalsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_StationController.cs" />
+    <Compile Include="Controllers\api\MORS\IDS_ParksListWagonsController.cs" />
+    <Compile Include="Controllers\api\MORS\IDS_ParksWagonsController.cs" />
+    <Compile Include="Controllers\api\MORS\IDS_CardsWagonsRepairsController.cs" />
+    <Compile Include="Controllers\api\MORS\IDS_CardsWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonsConditionController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_DEPOController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_SpecialConditionsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_PoligonTravelWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_OperatorsWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_LessorsWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_OwnersWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_TypeOwnerShipController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_TypeWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_GenusWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_ModelsWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_TypesRepairsWagonsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonManufacturersController.cs" />
+    <Compile Include="Controllers\api\RWT\IDS_RWT_Incoming_UZ_DOCController.cs" />
+    <Compile Include="Controllers\api\RWT\IDS_RWT_Incoming_ArrivalCarsController.cs" />
+    <Compile Include="Controllers\api\RWT\IDS_RWT_Incoming_ArrivalSostavController.cs" />
+    <Compile Include="Controllers\api\Metrans\Metrans_ConsigneeController.cs" />
+    <Compile Include="Controllers\api\Metrans\Metrans_ArrivalSostavController.cs" />
+    <Compile Include="Controllers\api\Directoty\UZ_Directory_InternalRailroadController.cs" />
+    <Compile Include="Controllers\api\Directoty\UZ_Directory_StationsController.cs" />
+    <Compile Include="Controllers\api\Directoty\UZ_Directory_StatesController.cs" />
+    <Compile Include="Controllers\api\Directoty\UZ_WebClientController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
