add dir Directory_CertificationData & Directory_CommercialCondition

--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -66,9 +66,11 @@
     <Compile Include="Concrete\Directory\EFDirectory_BorderCheckpoint.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_CargoGNG.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_CargoGroup.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_CommercialCondition.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_ConditionArrival.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Cargo.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_CargoETSNG.cs" />
+    <Compile Include="Concrete\Directory\EFDirectory_CertificationData.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_PayerArrival.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_LimitingLoading.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_Cars.cs" />
@@ -144,6 +146,8 @@
     <Compile Include="Entities\Directory\Directory_CargoETSNG.cs" />
     <Compile Include="Entities\Directory\Directory_CargoGNG.cs" />
     <Compile Include="Entities\Directory\Directory_CargoGroup.cs" />
+    <Compile Include="Entities\Directory\Directory_CertificationData.cs" />
+    <Compile Include="Entities\Directory\Directory_CommercialCondition.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
