--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -213,6 +213,8 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CarsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoETSNGController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CommercialConditionController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_CertificationDataController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_PayerArrivalController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_InlandRailwayController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_ExternalStationController.cs" />
