--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -225,12 +225,12 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CountrysController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_ShipperController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_ConsigneeController.cs" />
-    <Compile Include="Controllers\api\MORS\IDS_WagonsMotionSignalsController.cs" />
+    <Compile Include="Controllers\api\IDS\MORS\IDS_WagonsMotionSignalsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_StationController.cs" />
-    <Compile Include="Controllers\api\MORS\IDS_ParksListWagonsController.cs" />
-    <Compile Include="Controllers\api\MORS\IDS_ParksWagonsController.cs" />
-    <Compile Include="Controllers\api\MORS\IDS_CardsWagonsRepairsController.cs" />
-    <Compile Include="Controllers\api\MORS\IDS_CardsWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS\MORS\IDS_ParksListWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS\MORS\IDS_ParksWagonsController.cs" />
+    <Compile Include="Controllers\api\IDS\MORS\IDS_CardsWagonsRepairsController.cs" />
+    <Compile Include="Controllers\api\IDS\MORS\IDS_CardsWagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonsConditionController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_DEPOController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_SpecialConditionsController.cs" />
@@ -244,15 +244,16 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_ModelsWagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_TypesRepairsWagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonManufacturersController.cs" />
-    <Compile Include="Controllers\api\RWT\IDS_RWT_Incoming_UZ_DOCController.cs" />
-    <Compile Include="Controllers\api\RWT\IDS_RWT_Incoming_ArrivalCarsController.cs" />
-    <Compile Include="Controllers\api\RWT\IDS_RWT_Incoming_ArrivalSostavController.cs" />
+    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_UZ_DOCController.cs" />
+    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_ArrivalCarsController.cs" />
+    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_Incoming_ArrivalSostavController.cs" />
     <Compile Include="Controllers\api\Metrans\Metrans_ConsigneeController.cs" />
     <Compile Include="Controllers\api\Metrans\Metrans_ArrivalSostavController.cs" />
     <Compile Include="Controllers\api\Directoty\UZ_Directory_InternalRailroadController.cs" />
     <Compile Include="Controllers\api\Directoty\UZ_Directory_StationsController.cs" />
     <Compile Include="Controllers\api\Directoty\UZ_Directory_StatesController.cs" />
-    <Compile Include="Controllers\api\Directoty\UZ_WebClientController.cs" />
+    <Compile Include="Controllers\api\IDS\IDS_TransferController.cs" />
+    <Compile Include="Controllers\api\UZ\UZ_WebClientController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -559,6 +560,7 @@
     <Content Include="Scripts\api\ids_directory.js" />
     <Content Include="Scripts\api\ids_mors.js" />
     <Content Include="Scripts\api\ids_rwt_incoming.js" />
+    <Content Include="Scripts\api\ids_transfer.js" />
     <Content Include="Scripts\api\metrans.js" />
     <Content Include="Scripts\api\shared.js" />
     <Content Include="Scripts\api\uz_directory.js" />
