--- a/WEB_UI/packages.config
+++ b/WEB_UI/packages.config
@@ -11,6 +11,7 @@
   <package id="jQuery.UI" version="1.12.1.1" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.19.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" />
   <package id="Magnific.Popup" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.7" targetFramework="net452" />
