--- a/EFIDS/App.config
+++ b/EFIDS/App.config
@@ -15,6 +15,7 @@
     <add name="Model11" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="Model12" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="RailWay" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model13" connectionString="data source=HP_EDIK;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="aspnet:RoslynCompilerLocation" value="roslyn" />
