add table document uz

--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -109,16 +109,10 @@
     <Compile Include="Entities\MORS\CardsWagons.cs" />
     <Compile Include="Entities\MORS\CardsWagonsRepairs.cs" />
     <Compile Include="Entities\Directory\Directory_DEPO.cs" />
-    <Compile Include="Entities\Directory\Directory_GenusWagons.cs" />
     <Compile Include="Entities\Directory\Directory_LessorsWagons.cs" />
     <Compile Include="Entities\Directory\Directory_ModelsWagons.cs" />
-    <Compile Include="Entities\Directory\Directory_OperatorsWagons.cs" />
-    <Compile Include="Entities\Directory\Directory_OwnersWagons.cs" />
     <Compile Include="Entities\Directory\Directory_PoligonTravelWagons.cs" />
-    <Compile Include="Entities\Directory\Directory_SpecialConditions.cs" />
-    <Compile Include="Entities\Directory\Directory_TypeOwnerShip.cs" />
     <Compile Include="Entities\Directory\Directory_TypesRepairsWagons.cs" />
-    <Compile Include="Entities\Directory\Directory_TypeWagons.cs" />
     <Compile Include="Entities\Directory\Directory_WagonManufacturers.cs" />
     <Compile Include="Entities\Directory\Directory_WagonsCondition.cs" />
     <Compile Include="Concrete\EFDbContext.cs" />
@@ -128,28 +122,43 @@
     <Compile Include="Entities\MORS\ParksWagons.cs" />
     <Compile Include="Helper\ids_library.cs" />
     <Compile Include="Entities\RWT\ArrivalCars.cs" />
-    <Compile Include="Entities\RWT\ArrivalSostav.cs" />
-    <Compile Include="Entities\Directory\Directory_Station.cs" />
     <Compile Include="Entities\RWT\UZ_DOC.cs" />
-    <Compile Include="Entities\Directory\Directory_Consignee.cs" />
     <Compile Include="Entities\MORS\WagonsMotionSignals.cs" />
-    <Compile Include="Entities\Directory\Directory_Shipper.cs" />
+    <Compile Include="Entities\RWT\ArrivalSostav.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Cont_Pay.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Document.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Document_Acts.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Document_Docs.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Document_Pay.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Vagon.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Vagon_Acts.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Vagon_Cont.cs" />
+    <Compile Include="Entities\RWT\Arrival_UZ_Vagon_Pay.cs" />
     <Compile Include="Entities\Directory\Directory_BorderCheckpoint.cs" />
-    <Compile Include="Entities\Directory\Directory_Countrys.cs" />
-    <Compile Include="Entities\Directory\Directory_ExternalStation.cs" />
-    <Compile Include="Entities\Directory\Directory_InlandRailway.cs" />
-    <Compile Include="Entities\Directory\Directory_Railway.cs" />
-    <Compile Include="Entities\Directory\Directory_Cars.cs" />
-    <Compile Include="Entities\Directory\Directory_LimitingLoading.cs" />
-    <Compile Include="Entities\Directory\Directory_ConditionArrival.cs" />
-    <Compile Include="Entities\Directory\Directory_PayerArrival.cs" />
     <Compile Include="Entities\Directory\Directory_Cargo.cs" />
     <Compile Include="Entities\Directory\Directory_CargoETSNG.cs" />
     <Compile Include="Entities\Directory\Directory_CargoGNG.cs" />
     <Compile Include="Entities\Directory\Directory_CargoGroup.cs" />
+    <Compile Include="Entities\Directory\Directory_Cars.cs" />
     <Compile Include="Entities\Directory\Directory_CertificationData.cs" />
     <Compile Include="Entities\Directory\Directory_CommercialCondition.cs" />
+    <Compile Include="Entities\Directory\Directory_ConditionArrival.cs" />
+    <Compile Include="Entities\Directory\Directory_Consignee.cs" />
+    <Compile Include="Entities\Directory\Directory_Countrys.cs" />
+    <Compile Include="Entities\Directory\Directory_ExternalStation.cs" />
+    <Compile Include="Entities\Directory\Directory_GenusWagons.cs" />
     <Compile Include="Entities\Directory\Directory_HazardClass.cs" />
+    <Compile Include="Entities\Directory\Directory_InlandRailway.cs" />
+    <Compile Include="Entities\Directory\Directory_LimitingLoading.cs" />
+    <Compile Include="Entities\Directory\Directory_OperatorsWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_OwnersWagons.cs" />
+    <Compile Include="Entities\Directory\Directory_PayerArrival.cs" />
+    <Compile Include="Entities\Directory\Directory_Railway.cs" />
+    <Compile Include="Entities\Directory\Directory_Shipper.cs" />
+    <Compile Include="Entities\Directory\Directory_SpecialConditions.cs" />
+    <Compile Include="Entities\Directory\Directory_Station.cs" />
+    <Compile Include="Entities\Directory\Directory_TypeOwnerShip.cs" />
+    <Compile Include="Entities\Directory\Directory_TypeWagons.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
