--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -101,6 +101,15 @@
     <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon_Pay.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon_Cont.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon_Acts.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Document_Pay.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Document_Docs.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Document_Acts.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Cont_Pay.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Vagon.cs" />
+    <Compile Include="Concrete\RWT\EFArrival_UZ_Document.cs" />
     <Compile Include="Concrete\RWT\EFUZ_DOC.cs" />
     <Compile Include="Concrete\RWT\EFArrivalCars.cs" />
     <Compile Include="Concrete\RWT\EFArrivalSostav.cs" />
