--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -225,6 +225,10 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoETSNGController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CommercialConditionController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CertificationDataController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_ParkWayController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_WaysController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_DivisionsController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_TypeDivisionController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_HazardClassController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_PayerArrivalController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_InlandRailwayController.cs" />
