--- a/Test/packages.config
+++ b/Test/packages.config
@@ -5,4 +5,6 @@
   <package id="jQuery" version="1.8.0" targetFramework="net45" />
   <package id="jquery.mobile" version="1.4.5" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="19.7.0" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net45" />
 </packages>
