--- a/MetransMorsService/MetransMorsService.csproj
+++ b/MetransMorsService/MetransMorsService.csproj
@@ -90,8 +90,11 @@
   <ItemGroup>
     <EmbeddedResource Include="MetransMorsService.resx">
       <DependentUpon>MetransMorsService.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProjectInstaller.resx" />
+    <EmbeddedResource Include="ProjectInstaller.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBLOG\DBLOG.csproj">
