--- a/MetransService/MetransService.csproj
+++ b/MetransService/MetransService.csproj
@@ -97,8 +97,11 @@
   <ItemGroup>
     <EmbeddedResource Include="MetransService.resx">
       <DependentUpon>MetransService.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="ProjectInstaller.resx" />
+    <EmbeddedResource Include="ProjectInstaller.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBLOG\DBLOG.csproj">
