--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_BorderCheckpointController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoGNGController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoController.cs" />
+    <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CarsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoGroupController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_CargoETSNGController.cs" />
